# naosoccer_pos_action

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/workflows/: build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_rolling.yaml
action/: Pos.action
include/naosoccer_pos_action/: naosoccer_pos_action_node.hpp  visibility_control.h
nao_pos_interfaces/: CMakeLists.txt  package.xml
nao_pos_server/: CMakeLists.txt  package.xml
nao_pos_server/include/nao_pos_server/: key_frame.hpp  nao_pos_action_client.hpp  nao_pos_action_client2.hpp  nao_pos_action_server.hpp  nao_pos_action_server2.hpp
nao_pos_server/launch/: swing2_launch.py  swing_launch.py
nao_pos_server/pos/: c0.pos  d1.pos  d1l1.pos  d1l2.pos  d1l3.pos  d1r1.pos  d1r2.pos  d1r3.pos  d2.pos  d2l1.pos  d2l2.pos  d2l3.pos  d2r1.pos  d2r2.pos  d2r3.pos  l1.pos  l2.pos  l3.pos  only_legs.pos  r1.pos  r2.pos  r3.pos  sit-to-sit.pos  sit-to-stand.pos  stand-to-sit.pos  testAll.pos  test_parser1.pos  u1.pos  u1l1.pos  u1l2.pos  u1l3.pos  u1r1.pos  u1r2.pos  u1r3.pos  u2.pos  u2l1.pos  u2l2.pos  u2l3.pos  u2r1.pos  u2r2.pos  (+1 more)
nao_pos_server/src/: indexes.hpp  nao_pos_action_client.cpp  nao_pos_action_client2.cpp  nao_pos_action_server.cpp  nao_pos_action_server2.cpp  nao_pos_publisher.cpp  parser.cpp  parser.hpp
nao_pos_server/test/: CMakeLists.txt
src/: action_server.cpp  fibonacci_action_client.cpp  fibonacci_action_server.cpp  naosoccer_pos_action_client.cpp  naosoccer_pos_action_node.cpp  naosoccer_pos_action_server.cpp
