cmake_minimum_required(VERSION 3.5)
project(nao_pos_server)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(ament_index_cpp REQUIRED)
find_package(Boost COMPONENTS filesystem REQUIRED)
find_package(nao_pos_interfaces REQUIRED)
find_package(nao_lola_sensor_msgs REQUIRED)
find_package(nao_lola_command_msgs REQUIRED)
find_package(std_msgs REQUIRED)

set(THIS_PACKAGE_INCLUDE_DEPENDS
  rclcpp
  rclcpp_action
  rclcpp_components
  ament_index_cpp
  Boost
  nao_pos_interfaces
  nao_lola_sensor_msgs
  nao_lola_command_msgs
  std_msgs)

add_executable(nao_pos_publisher src/nao_pos_publisher.cpp)
ament_target_dependencies(nao_pos_publisher rclcpp std_msgs)
install(TARGETS
  nao_pos_publisher
  DESTINATION lib/${PROJECT_NAME})

# ################ NAO_POS_ACTION_SERVER ####################
add_library(${PROJECT_NAME}_node SHARED
  src/nao_pos_action_server.cpp
  src/parser.cpp)
target_include_directories(${PROJECT_NAME}_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

rclcpp_components_register_node(${PROJECT_NAME}_node
  PLUGIN "nao_pos_action_server_ns::NaoPosActionServer"
  EXECUTABLE nao_pos_action_server)

ament_target_dependencies(${PROJECT_NAME}_node ${THIS_PACKAGE_INCLUDE_DEPENDS})

ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})

# Install
install(
  DIRECTORY include/
  DESTINATION include)
install(
  TARGETS ${PROJECT_NAME}_node
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include)
install(
  DIRECTORY pos/
  DESTINATION share/${PROJECT_NAME}/pos/
)

# ################ NAO_POS_ACTION_SERVER2 ####################
add_library(${PROJECT_NAME}2_node SHARED
  src/nao_pos_action_server2.cpp
  src/parser.cpp)
target_include_directories(${PROJECT_NAME}2_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

rclcpp_components_register_node(${PROJECT_NAME}2_node
  PLUGIN "nao_pos_action_server2_ns::NaoPosActionServer2"
  EXECUTABLE nao_pos_action_server2)

ament_target_dependencies(${PROJECT_NAME}2_node ${THIS_PACKAGE_INCLUDE_DEPENDS})

ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})

# Install
install(
  DIRECTORY include/
  DESTINATION include)
install(
  TARGETS ${PROJECT_NAME}2_node
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include)
install(
  DIRECTORY pos/
  DESTINATION share/${PROJECT_NAME}/pos/
)

# ################ NAO_POS_ACTION_CLIENT ####################
add_library(nao_pos_client SHARED
  src/nao_pos_action_client.cpp)
target_include_directories(nao_pos_client PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

rclcpp_components_register_node(nao_pos_client
  PLUGIN "nao_pos_action_client_ns::NaoPosActionClient"
  EXECUTABLE nao_pos_action_client)

ament_target_dependencies(nao_pos_client ${THIS_PACKAGE_INCLUDE_DEPENDS})

ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})

# Install
install(
  DIRECTORY include/
  DESTINATION include)
install(
  TARGETS nao_pos_client
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include)
install(
  DIRECTORY pos/
  DESTINATION share/${PROJECT_NAME}/pos/
)


# Install launch files.
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

# ################ NAO_POS_ACTION_CLIENT ####################
add_library(nao_pos_client2 SHARED
  src/nao_pos_action_client2.cpp)
target_include_directories(nao_pos_client2 PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

rclcpp_components_register_node(nao_pos_client2
  PLUGIN "nao_pos_action_client2_ns::NaoPosActionClient2"
  EXECUTABLE nao_pos_action_client2)

ament_target_dependencies(nao_pos_client2 ${THIS_PACKAGE_INCLUDE_DEPENDS})

ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})

# Install
install(
  DIRECTORY include/
  DESTINATION include)
install(
  TARGETS nao_pos_client2
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include)
install(
  DIRECTORY pos/
  DESTINATION share/${PROJECT_NAME}/pos/
)


# Install launch files.
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)


# Test
#if(BUILD_TESTING)
#  find_package(ament_cmake_gtest REQUIRED)
#  add_subdirectory(test)

#  find_package(ament_lint_auto REQUIRED)
#  ament_lint_auto_find_test_dependencies()
#endif()

ament_package()
